--- a/css/css.css
+++ b/css/css.css
@@ -94,14 +94,16 @@ filter:alpha(opacity=80);
             }
 
             #contenedor div.select img{
-                width:56%;
+                width:30%;
                 height:auto;
                 box-shadow:0 0 20px #DDD;
                 border:5px solid #FFF;
                 position:fixed;	
                 top:20%;
-                left:20%;
+                left:40%;
             }
+
+
 
             #contenedor div.select + div{
                 margin:5px 3% 5px 31%;
@@ -127,7 +129,7 @@ filter:alpha(opacity=80);
                 text-align:center;
                 position:fixed;	
                 top:20%;
-                left:20%;
+                left:40%;
             }
 
             /*Se muestra la descripcion al posicionar el cursor encima de la imagen*/
@@ -296,7 +298,7 @@ nav ul li a .quinto {
  
  #contenedor1
 {
-	background-image: url("../imagenes/fondo.jpg");
+	background-image: url("../imagenes/fondo1.jpg");
    background-size:100%;
     background-attachment: fixed;
 	width:100%;
@@ -344,7 +346,27 @@ h1
             }
 
 
+.boton {
+text-decoration:none;
+font-weight:100;
+font-size:15px;
+color:#ffffff;
+padding-top:15px;
+padding-bottom:15px;
+padding-left:50px;
+padding-right:50px;
+background-color:#000000;
+margin-left: 1750px;
+border:1px;
+position:relative;
+bottom:33px;
 
+
+}
+/* Este es el estilo al poner el cursor encima del boton*/
+.boton:hover {
+background-color:#1977EF;
+}
 
 
 
