--- a/css/css.css
+++ b/css/css.css
@@ -296,7 +296,7 @@ nav ul li a .quinto {
 	background:#37a4d9;
 }
  
- #contenedor1
+ /*#contenedor1
 {
 	background-image: url("../imagenes/fondo1.jpg");
    background-size:100%;
@@ -306,7 +306,7 @@ nav ul li a .quinto {
 	box-shadow:0px 0px 10px #000;
 	border-radius:20px;
 	border:1px solid black;
-}
+}*/
 header {
 	margin-top:10px;
     width: 100%;
@@ -356,7 +356,7 @@ padding-bottom:15px;
 padding-left:50px;
 padding-right:50px;
 background-color:#000000;
-margin-left: 1750px;
+margin-left: 1400px;
 border:1px;
 position:relative;
 bottom:33px;
@@ -368,5 +368,21 @@ bottom:33px;
 background-color:#1977EF;
 }
 
+
+body, html {
+    height: 90%;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-image: url("../imagenes/fondo1.jpg");
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  
+}
 
 
