--- a/css/videos.css
+++ b/css/videos.css
@@ -9,16 +9,22 @@
 	color: #000;
 	font-size: 44px;
 	text-align: center;
+	position:relative;
+    bottom:150px;
 }
 .row{
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
+	position:relative;
+bottom:130px;
 
 }
 .col{
 	flex-basis: 50%;
 	min-width: 250px;
+	position:relative;
+bottom:80px;
 }
 .feature-img{
 	width: 83%;
@@ -61,7 +67,8 @@
 	width: 35px;
 }
 .video-player {
-	width: 80%;
+	width: 50%;
+	height:90%;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -100,4 +107,12 @@ bottom:33px;
 /* Este es el estilo al poner el cursor encima del boton*/
 .boton:hover {
 background-color:#1977EF;
+}
+
+.youtube{
+position:relative;
+bottom:450px;
+margin-left: 250px;
+
+
 }
