--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,20 @@ animation-delay: 17s; /*tiempo de espera hasta que se produce la animación*/
 /*  animation-iteration-count: infinite;*/
 }
 
+h3{
+   font-size: 72px;
+  background: -webkit-linear-gradient(#ff0000, #7686fd);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position:relative;
+  bottom:250px;
+}
 
+h3 {
+animation-duration: 12s !important; /*tiempo que dura la animación*/ 
+animation-delay: 17s; /*tiempo de espera hasta que se produce la animación*/
+/*  animation-iteration-count: infinite;*/
+}
 
 
 
